--- a/css/style.css
+++ b/css/style.css
@@ -373,12 +373,23 @@ input[type="search"]::-webkit-search-cancel-button {
   position: absolute;
   top: calc(-1 * var(--h) / 2);
   left: calc(-1 * var(--w) / 2);
+  -webkit-transition: -webkit-transform .3s;
+  -moz-transition: transform .3s;
+  -o-transition: transform .3s;
+  -ms-transition: transform .3s;
   transition: transform .3s;
+  -webkit-transition-delay:  var(--d);
   transition-delay: var(--d);
+  -webkit-transform: translate(var(--x), var(--y));
+  -moz-transform: translate(var(--x), var(--y));
+  -ms-transform: translate(var(--x), var(--y));
+  -o-transform: translate(var(--x), var(--y));
   transform: translate(var(--x), var(--y));
   animation: span 9s infinite linear;
   animation-delay: 4.9s;
   filter: drop-shadow(0px 10px 30px rgba(148, 148, 148, 0.1));
+
+
 }
 
 .axis.active .item:nth-child(1) {
@@ -684,6 +695,10 @@ input[type="search"]::-webkit-search-cancel-button {
   .users__amount-text {
     margin-left: 0;
     padding-top: 0;
+  }
+
+  .axis {
+    left: 0;
   }
 }
 
