--- a/css/style.css
+++ b/css/style.css
@@ -373,18 +373,22 @@ input[type="search"]::-webkit-search-cancel-button {
   position: absolute;
   top: calc(-1 * var(--h) / 2);
   left: calc(-1 * var(--w) / 2);
-  -webkit-transition: -webkit-transform .3s;
-  -moz-transition: transform .3s;
-  -o-transition: transform .3s;
-  -ms-transition: transform .3s;
-  transition: transform .3s;
-  -webkit-transition-delay:  var(--d);
-  transition-delay: var(--d);
+
   -webkit-transform: translate(var(--x), var(--y));
   -moz-transform: translate(var(--x), var(--y));
   -ms-transform: translate(var(--x), var(--y));
   -o-transform: translate(var(--x), var(--y));
   transform: translate(var(--x), var(--y));
+  
+  -webkit-transition: -webkit-transform .3s;
+  -moz-transition: transform .3s;
+  -o-transition: transform .3s;
+  -ms-transition: transform .3s;
+  transition: transform .3s;
+
+  -webkit-transition-delay:  var(--d);
+  transition-delay: var(--d);
+
   animation: span 9s infinite linear;
   animation-delay: 4.9s;
   filter: drop-shadow(0px 10px 30px rgba(148, 148, 148, 0.1));
@@ -430,6 +434,19 @@ input[type="search"]::-webkit-search-cancel-button {
   --x: 219px;
   --y: 44px;
   --d: 4.6s;
+}
+
+@-webkit-keyframes span {
+  from {
+    transform: rotate(0turn)
+               translate(var(--x), var(--y))
+               rotate(1turn)
+  }
+  to {
+    transform: rotate(1turn)
+               translate(var(--x), var(--y))
+               rotate(0turn)
+  }
 }
 
 
